# LAB1_MAI-OOP-LABS-cpp-2025

lab1/: CMakeLists.txt  palindrome.cpp  palindrome.h  palindrome_app.cpp  palindrome_test.cpp
